@@ -1,0 +1,136 @@
+menuconfig NET_SNMP
+	bool "Net-SNMP            "
+
+config NET_SNMP_FEATURE_ENABLE_LITTLE_ENDIAN
+	bool
+	default n
+	depends on NET_SNMP
+	prompt "Build for little endian target"
+
+config NET_SNMP_FEATURE_ENABLE_MINI_AGENT
+	bool
+	default y
+	depends on NET_SNMP
+	prompt "Build a minimal agent"
+
+config NET_SNMP_FEATURE_DISABLE_AGENT
+	bool
+	default n
+	depends on NET_SNMP
+	prompt "Do not build the agent (snmpd)"
+
+config NET_SNMP_FEATURE_DISABLE_APPLICATIONS
+	bool
+	default n
+	depends on NET_SNMP
+	prompt "Do not build the apps (snmpget, ...)"
+
+config NET_SNMP_FEATURE_DISABLE_SCRIPTS
+	bool
+	default n
+	depends on NET_SNMP
+	prompt "Do not build the scripts (mib2c, ...)"
+
+config NET_SNMP_FEATURE_DISABLE_MIBS
+	bool
+	default n
+	depends on NET_SNMP
+	prompt "Do not install the mib files"
+
+config NET_SNMP_FEATURE_DISABLE_MIB_LOADING
+	bool
+	default n
+	depends on NET_SNMP
+	prompt "Do not include code that parses and manipulates mib files."
+
+config NET_SNMP_FEATURE_DISABLE_SNMPV1
+	bool
+	default n
+	depends on NET_SNMP
+	prompt "Do not include code that implements SNMPv1"
+
+config NET_SNMP_FEATURE_DISABLE_SNMPV2C
+	bool
+	default n
+	depends on NET_SNMP
+	prompt "Do not include code that implements SNMPv2c"
+
+config NET_SNMP_FEATURE_DISABLE_DES
+	bool
+	default n
+	depends on NET_SNMP
+	prompt "Do not support DES encryption"
+
+config NET_SNMP_FEATURE_DISABLE_MD5
+	bool
+	default n
+	depends on NET_SNMP
+	prompt "Do not support MD5 authentication"
+
+config NET_SNMP_FEATURE_DISABLE_SNMPTRAPD
+	bool
+	default n
+	depends on NET_SNMP
+	prompt "Disable agentx subagent code in snmptrapd"
+
+config NET_SNMP_FEATURE_ENABLE_IPV6
+	bool
+	default n
+	depends on NET_SNMP
+	prompt "Enable IPv6 ready version"
+
+config NET_SNMP_FEATURE_ENABLE_LOCAL_SMUX
+	bool
+	default n
+	depends on NET_SNMP
+	prompt "Restrict SMUX connections to localhost (by default)"
+
+config NET_SNMP_FEATURE_DISABLE_DEBUGGING
+	bool
+	default n
+	depends on NET_SNMP
+	prompt "Disallows debugging code to be built in"
+
+config NET_SNMP_FEATURE_ENABLE_DEVELOPER
+	bool
+	default n
+	depends on NET_SNMP
+	prompt "Turn on super-duper-extra-compile-warnings using gcc"
+
+config NET_SNMP_FEATURE_DEFAULT_SNMP_VERSION
+	prompt "default SNMP version: 1, 2 (for SNMPv2c), or 3"
+	string
+	default	"3"
+	depends on NET_SNMP
+
+config NET_SNMP_FEATURE_LOGFILE
+	prompt "logfile location"
+	string
+	default	"/var/log/snmpd.log"
+	depends on NET_SNMP
+
+config NET_SNMP_FEATURE_PERSISTENT_DIR
+	prompt "persistent data storage directory"
+	string
+	default	"/var/net-snmp"
+	depends on NET_SNMP
+
+config NET_SNMP_FEATURE_WITH_MIB_MODULES
+	prompt "compile with additional mib modules"
+	string
+	default	""
+	depends on NET_SNMP
+
+config NET_SNMP_FEATURE_WITH_MIBS
+	prompt "default mib id's to read"
+	string
+	default	""
+	depends on NET_SNMP
+
+config NET_SNMP_MIB_INSTALL_DIR
+	prompt "directory to install mib files"
+	string
+	default	"/usr/share/snmp/mibs"
+	depends on NET_SNMP
+
+
