@@ -40,6 +40,7 @@ source "rules/libpcap.in"
 source "rules/lighttpd.in"
 source "rules/mii-diag.in"
 #source "rules/myghty.in"
+source "rules/net-snmp.in"
 source "rules/netcat.in"
 source "rules/nfsutils.in"
 source "rules/nmap.in"
